--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "express-session": "^1.17.0",
     "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
-    "mongoose": "~5.9.2",
+    "mongoose": "^5.12.7",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
